<resources>
    <string name="app_name">SharEaze</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_lend">Lend</string>
    <string name="menu_item">Item</string>
    <string name="menu_borrow">Borrow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="available">Available</string>
    <string name="online">Online</string>
    <string name="dimension">Dimension</string>
    <string name="wxhxl">WxHxL</string>
    <string name="send_code">Send Code</string>
    <string name="borrows_requests">Borrows Requests</string>
</resources>