<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_lend"
            android:icon="@drawable/list"
            android:title="@string/menu_lend" />

        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/item_23"
            android:title="@string/menu_item" />

        <item
            android:id="@+id/nav_borrow"
            android:icon="@drawable/borrow"
            android:title="@string/menu_borrow" />
    </group>
</menu>